[gd_scene format=3 uid="uid://bpbljowvt0x30"]

[ext_resource type="Script" uid="uid://cwed64i6futma" path="res://actors/player_avatar/player_avatar.gd" id="1_7d4p0"]
[ext_resource type="Script" uid="uid://bitjq658krtn4" path="res://interactions/hurtbox_delegate.gd" id="2_7v3as"]
[ext_resource type="Script" uid="uid://dpw1sjo8nt3w6" path="res://interactions/attack_info.gd" id="2_shxxo"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7d4p0"]
radius = 0.4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7d4p0"]
height = 1.19375
radius = 0.4

[sub_resource type="BoxShape3D" id="BoxShape3D_j6txm"]
size = Vector3(0.2, 0.7, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_6ugg2"]
size = Vector3(0.2, 0.90000004, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_uiqcp"]
size = Vector3(0.02, 0.02, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_shxxo"]
shading_mode = 2
albedo_color = Color(0.43717483, 0.38109717, 0.12552223, 1)
metallic = 1.0
metallic_specular = 1.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_shxxo"]
direction = Vector3(0, 0.6, -1)
spread = 15.0
initial_velocity_min = 5.0
initial_velocity_max = 5.0

[sub_resource type="CylinderMesh" id="CylinderMesh_shxxo"]
top_radius = 0.01
bottom_radius = 0.01
height = 0.06
radial_segments = 6
rings = 0

[sub_resource type="Animation" id="Animation_shxxo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hit_border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7v3as"]
resource_name = "hit_border_flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hit_border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03333336, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j6txm"]
_data = {
&"RESET": SubResource("Animation_shxxo"),
&"hit_border_flash": SubResource("Animation_7v3as")
}

[node name="player_avatar" type="CharacterBody3D" unique_id=542596095]
collision_layer = 66
collision_mask = 19
script = ExtResource("1_7d4p0")

[node name="lower_body_shape" type="CollisionShape3D" parent="." unique_id=1484220958]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.39999998, 0)
shape = SubResource("SphereShape3D_7d4p0")

[node name="upper_body_shape" type="CollisionShape3D" parent="." unique_id=1439559226]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("SphereShape3D_7d4p0")

[node name="headroom_area" type="Area3D" parent="." unique_id=647084821]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
visible = false
collision_layer = 32
collision_mask = 17

[node name="CollisionShape3D" type="CollisionShape3D" parent="headroom_area" unique_id=1509662183]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.22187507, 0)
shape = SubResource("CylinderShape3D_7d4p0")

[node name="HurtboxDelegate" type="Area3D" parent="." unique_id=387807542]
collision_layer = 64
collision_mask = 4
script = ExtResource("2_7v3as")
metadata/_custom_type_script = "uid://bitjq658krtn4"

[node name="lower_hurt_shape" type="CollisionShape3D" parent="HurtboxDelegate" unique_id=142617089]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.9802322e-08, 0.35000002, -2.2351742e-08)
shape = SubResource("BoxShape3D_j6txm")

[node name="upper_hurt_shape" type="CollisionShape3D" parent="HurtboxDelegate" unique_id=912140494]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.9802322e-08, 1.1500001, 2.9802322e-08)
shape = SubResource("BoxShape3D_6ugg2")

[node name="yaw" type="Node3D" parent="." unique_id=681930867]

[node name="pitch" type="Node3D" parent="yaw" unique_id=1652831979]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="hitscan_node" type="Node3D" parent="yaw/pitch" unique_id=1368025332]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="camera_mount" type="Node3D" parent="yaw/pitch" unique_id=1787671750]

[node name="Camera3D" type="Camera3D" parent="yaw/pitch/camera_mount" unique_id=1107911285]
cull_mask = 524287
current = true
fov = 85.0

[node name="weapon" type="Node3D" parent="yaw/pitch" unique_id=1417272202]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.20000002, -0.39999998, -0.1)

[node name="weapon_launch_node" type="Node3D" parent="yaw/pitch/weapon" unique_id=1668124584]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.74862975)

[node name="rotor" type="Node3D" parent="yaw/pitch/weapon" unique_id=1438465208]

[node name="MeshInstance3D" type="MeshInstance3D" parent="yaw/pitch/weapon/rotor" unique_id=1431048953]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.049999952, -0.25)
cast_shadow = 0
mesh = SubResource("BoxMesh_uiqcp")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="yaw/pitch/weapon/rotor" unique_id=943610462]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.049999997, 0, -0.25)
cast_shadow = 0
mesh = SubResource("BoxMesh_uiqcp")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="yaw/pitch/weapon/rotor" unique_id=1365039984]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.049999952, -0.25)
cast_shadow = 0
mesh = SubResource("BoxMesh_uiqcp")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="yaw/pitch/weapon/rotor" unique_id=1640863703]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.050000012, 0, -0.25)
cast_shadow = 0
mesh = SubResource("BoxMesh_uiqcp")
skeleton = NodePath("../..")

[node name="ejected_brass_particles" type="GPUParticles3D" parent="yaw/pitch/weapon" unique_id=1924505713]
transform = Transform3D(-0.25881904, 0, -0.9659257, 0.9659257, 1.3113416e-07, -0.25881904, 1.2666587e-07, -1, -3.394002e-08, 0, 1.3113416e-08, -0.1)
material_override = SubResource("StandardMaterial3D_shxxo")
amount = 32
process_material = SubResource("ParticleProcessMaterial_shxxo")
draw_pass_1 = SubResource("CylinderMesh_shxxo")

[node name="SpotLight3D" type="SpotLight3D" parent="yaw/pitch" unique_id=1636818555]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -0.2, 0.1)
light_energy = 1.5
light_volumetric_fog_energy = 0.1
spot_range = 24.0
spot_attenuation = 0.54
spot_angle_attenuation = 1.5691686

[node name="muzzle_flash_light" type="OmniLight3D" parent="yaw/pitch" unique_id=900091206]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -0.39999998, -0.9)
light_volumetric_fog_energy = 0.1

[node name="AttackInfo" type="Node" parent="." unique_id=454855363]
script = ExtResource("2_shxxo")
metadata/_custom_type_script = "uid://dpw1sjo8nt3w6"

[node name="Control" type="Control" parent="." unique_id=353045556]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="Control" unique_id=819849285]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="Control/Control" unique_id=1700193201]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 1)

[node name="health_text" type="Label" parent="Control" unique_id=763492850]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_right = 64.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.39813724, 0.8809277, 7.70092e-07, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hit_border" type="Control" parent="Control" unique_id=1756746349]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="Control/hit_border" unique_id=60859023]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 16.0
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Control/hit_border" unique_id=1728162741]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
grow_horizontal = 0
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="hit_border_anims" type="AnimationPlayer" parent="Control" unique_id=495365926]
libraries/ = SubResource("AnimationLibrary_j6txm")
